# mipt-2017-algorithm

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md
task-1-A/: CMakeLists.txt  main.cpp
task-1-B1/: CMakeLists.txt  main.cpp
task-1-B2/: CMakeLists.txt  main.cpp
task-1-C/: CMakeLists.txt  main.cpp
task-2-A/: CMakeLists.txt  main.cpp
task-3-A/: CMakeLists.txt  main.cpp
task-3-B/: CMakeLists.txt  main.cpp
task-3-C/: CMakeLists.txt  main.cpp
task-4-A/: CMakeLists.txt  biginteger.h  main.cpp
task-4-C/: Fourie.ipynb
