cmake_minimum_required(VERSION 3.6)
project(Fivt) 
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
add_subdirectory(task-1-A)
add_subdirectory(task-1-B1)
add_subdirectory(task-1-B2)
add_subdirectory(task-1-C)
add_subdirectory(task-2-A)
add_subdirectory(task-3-A)
add_subdirectory(task-3-B)
add_subdirectory(task-3-C)
